--- a/src/app/Chat-Bet/pages/aboutus/aboutus.component.html
+++ b/src/app/Chat-Bet/pages/aboutus/aboutus.component.html
@@ -119,6 +119,60 @@
 
 <hr class="hr">
 
+<div id="funciones" class="section">
+  <div class="second-section">
+    <div class="second-flex">
+      <h1>Meet the Team Behind ChatBet</h1>
+      <div class="text">
+          <p>Our team brings together experts in AI, gaming, and technology, united by a passion for innovation.<br /><br /></p>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="comofunciona" class="section">
+  <div class="fourth-section">
+    <div class="image-carousel">
+      <div class="carousel-item">
+        <img src="../../../../assets/CEO/1.png" alt="" />
+        <h2>Mauricio Lince</h2>
+        <h2>CEO</h2>
+        <p>Visionary leader with extensive experience in the gaming industry, driving ChatBet’s strategic growth and innovation.</p>
+      </div>
+
+      <div class="carousel-item">
+        <img src="../../../../assets/CEO/2.png" alt="" />
+        <h2>Luis Vargas</h2>
+        <h2>CTO</h2>
+          <p>AI and tech expert responsible for ChatBet’s cutting-edge natural language processing and AI-powered betting capabilities.</p>
+      </div>
+      <div class="carousel-item">
+        <img src="../../../../assets/CEO/3.png" alt="" />
+        <h2>Manuel Jimenez</h2>
+        <h2>CSO</h2>
+        <p>Leading LatAm growth and expansion, securing key partnerships, and driving revenue in the region.</p>
+      </div>
+      <div class="carousel-item">
+        <img src="../../../../assets/CEO/4.png" alt="" />
+        <h2>Josh Swerdlow</h2>
+        <h2>CGO</h2>
+        <p>Driving global expansion beyond LatAm, leading investor negotiations, and executing high-impact growth strategies.</p>
+      </div>
+
+      <div class="carousel-item">
+        <img src="../../../../assets/CEO/5.png" alt="" />
+        <h2>Jean Varon</h2>
+        <h2>CCSO</h2>
+        <p>Focused on customer success, ensuring seamless operator integrations, retention, and long-term client satisfaction.</p>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
 
 
 <div class="backgroundline">
