--- a/src/app/Chat-Bet/pages/spotlight/spotlight.component.html
+++ b/src/app/Chat-Bet/pages/spotlight/spotlight.component.html
@@ -1,13 +1,13 @@
 <div class="section">
   <div class="background">
-    <img src="./assets/Background/nuevoheader.png" alt="" />
+    <!-- <img src="./assets/Background/nuevoheader.png" alt="" /> -->
   </div>
 
   <header>
     <div class="section-header">
       <img class="chatbetone" src="./assets/Icon/Layer_1.png" alt="" routerLink="/"/>
       
-      <img class="chatbet" src="../../../../assets/img/Frame0.png" alt="" />
+      <!-- <img class="chatbet" src="../../../../assets/img/Frame0.png" alt="" /> -->
       <div class="newidioma">
         <a href="" >
           En
@@ -18,11 +18,13 @@
         </a>
       </div>
       <div class="navbar">
-        <a href="#funciones">{{ "headerone" | translate }}</a>
-        <a href="#beneficios">{{ "headertwo" | translate }}</a>
-        <a href="#comofunciona">{{ "headertree" | translate }}</a>
-        <a href="#integracion">{{ "headerfour" | translate }}</a>
-        <a href="#contactanos">{{ "headerfive" | translate }}</a>
+        <a href="#feature">Features</a>
+        <a href="#benefits">Benefits</a>
+        <a href="#HowDoesitWork">How It Works</a>
+        <a href="#security">Security</a>
+        <a href="#compliance">Compliance</a>
+        <a href="#integration">Integration</a>
+        <a href="#contactus">ContactUs</a>
         <span class="divisor">|</span>
         <a routerLink="/spotlight"  >Spotlight</a>
         <span class="divisor">|</span>
@@ -35,11 +37,12 @@
           <a href="" >
             Es
           </a>
-        
+  
         </div>
       </div>
     </div>
   </header>
+
 
 
   <div class="first-section">
