--- a/src/app/Chat-Bet/pages/aboutus/aboutus.component.scss
+++ b/src/app/Chat-Bet/pages/aboutus/aboutus.component.scss
@@ -110,32 +110,47 @@ h3{
       
   }
   .section{
-      position: relative;
-      /* max-width: 1280px; */
-      margin: 0 auto;
-      padding-left: 7%;
-      padding-right: 7%;
-      margin-bottom: 64px;
-      .background{
-          position: absolute;
-          left: 0;
-          right: 0;
-          width: 100%;
-          z-index: -1;
-          img{
-              width: 100%;
-              height: 100%;
-              object-fit: cover;
-          }
-      }
-  }
+    position: relative;
+    /* max-width: 1280px; */
+    margin: 0 auto;
+    padding-left: 7%;
+    padding-right: 7%;
+    margin-bottom: 64px;
 
-  
-  .section-header{
-      display: flex;
-      justify-content: space-between;
-      padding: 10px;
-      align-items: center;
+
+    .section-header:first-child {
+        margin-left: -7%;
+        margin-right: -7%;
+        padding-left: 7%;
+        padding-right: 7%;
+      }
+    .background{
+        position: absolute;
+        left: 0;
+        right: 0;
+        width: 100%;
+        z-index: -1;
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+}
+
+
+.section-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: white;
+    padding: 2rem;
+    overflow: hidden;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+
+
+    box-shadow: 0 10px 15px -5px rgba(85, 84, 243, 0.4);
       .chatbetone{
         cursor: pointer;}
       .phonediv{
@@ -183,27 +198,27 @@ h3{
       }
   }
   .navbar{
-      display: flex;
-      a{
-          color: white;
-          text-decoration: none;
-          margin-right: 20px;
-          font-family: "Poppins", sans-serif;
-          &:hover{
-              color: #9595ff;
-          }       
-      @media(min-width: 1050px) and (max-width: 1100px){
-          margin-right: 8px;
-      }
-          @media screen and (max-width: 1049px){display: none; }
-      }
-      .divisor{
-          margin-right: 5px;
-          font-family: "Poppins", sans-serif;
-          font-weight: bold;
-          color: #F3F2FF;
-         @media screen and (max-width: 1049px){display: none;}
-      }
+    display: flex;
+    a{
+        color: #5554F3;
+        text-decoration: none;
+        margin-right: 20px;
+        font-family:  "Poppins-Bold", sans-serif;
+        &:hover{
+            color: #9595ff;
+        }       
+    @media(min-width: 1050px) and (max-width: 1100px){
+        margin-right: 8px;
+    }
+        @media screen and (max-width: 1049px){display: none; }
+    }
+    .divisor{
+        margin-right: 5px;
+        font-family: "Poppins", sans-serif;
+        font-weight: bold;
+        color: #5554F3;
+       @media screen and (max-width: 1049px){display: none;}
+    }
       .idioma{
           align-items: center;
           cursor: pointer;
