--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -19,15 +19,39 @@ p{
     text-align: justify;
 }
 
+
+.tag{
+display: flex;
+justify-content: center;
+align-items: center;
+
+}  
+.TitleTag{
+    font-family: "Poppins-Bold", sans-serif;
+    text-align: center;
+    display: inline-flex;
+    justify-content: center;
+    border: solid 1px;
+    border-color: #9595ff;
+    border-radius: 50px;
+    padding: 0.5rem 3rem;
+    color: #5554F3;
+    margin: 0 auto; 
+}
+
+
 .backgroundline{
+
     img{
         width: 100%;
         height: 100%;
         object-fit: cover;
+        display: block;
 
     }
 
     .fotter1{
+        margin: 0;
         @media (max-width: 900px){
             display: none;   
         }
@@ -116,6 +140,14 @@ h3{
         padding-left: 7%;
         padding-right: 7%;
         margin-bottom: 64px;
+
+
+        .section-header:first-child {
+            margin-left: -7%;
+            margin-right: -7%;
+            padding-left: 7%;
+            padding-right: 7%;
+          }
         .background{
             position: absolute;
             left: 0;
@@ -134,8 +166,15 @@ h3{
     .section-header{
         display: flex;
         justify-content: space-between;
-        padding: 10px;
         align-items: center;
+        background: white;
+        padding: 2rem;
+        overflow: hidden;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+
+
+        box-shadow: 0 10px 15px -5px rgba(85, 84, 243, 0.4);
         .phonediv{
             display: flex;
         width: 100%;
@@ -148,9 +187,7 @@ h3{
             align-items: center;
             justify-content: center;
             flex-direction: column;
-          .chatbetone{
-            display: none;
-          }
+      
         }
         @media screen and (min-width: 900px){
           .chatbet{
@@ -166,15 +203,17 @@ h3{
             margin-left: 15px;
             a{
                 margin: 5px;
-                color: white;
+                color: #5554F3;
                 text-decoration: none;
-                font-family: "Poppins", sans-serif;
+                font-family: "Poppins-Bold", sans-serif;
                 font-size: 1.2rem;
                 font-weight: 600;
                 &:hover{
                     color: #9595ff;
                 }
             }
+
+
             @media screen and (min-width: 900px){
                 display: none;
             }
@@ -183,10 +222,10 @@ h3{
     .navbar{
         display: flex;
         a{
-            color: white;
+            color: #5554F3;
             text-decoration: none;
             margin-right: 20px;
-            font-family: "Poppins", sans-serif;
+            font-family:  "Poppins-Bold", sans-serif;
             &:hover{
                 color: #9595ff;
             }       
@@ -199,7 +238,7 @@ h3{
             margin-right: 5px;
             font-family: "Poppins", sans-serif;
             font-weight: bold;
-            color: #F3F2FF;
+            color: #5554F3;
            @media screen and (max-width: 1049px){display: none;}
         }
         .idioma{
@@ -231,7 +270,8 @@ h3{
         font-family: "Poppins-Bold", sans-serif;
     }
     .TitleBoldMobile{
-        font-family: "Poppins-Bold", sans-serif;
+        font-family: "Poppins", sans-serif;
+        font-size: 1.2rem;
         @media screen and (max-width: 900px){
             font-size: 1.5rem;
         }
@@ -312,7 +352,8 @@ h3{
     }
 
     .merch{
-        display: flex;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
         grid-gap: 10px;
 
 
@@ -970,6 +1011,7 @@ h3{
             display: flex;
             justify-content: center;
         }  
+
 }
 .form-input{
     display: grid;
@@ -983,7 +1025,7 @@ h3{
         border: none;
         background-color: transparent;
         border-bottom: solid 1px;
-        border-color: black;
+        border-color: #E4EBEE;
         color: black;
         font-family: 'Poppins', sans-serif; 
         margin-top: 15px;
@@ -1008,7 +1050,7 @@ h3{
         width: 20%;
         padding: 1rem;
         border-bottom: solid 1px;
-        border-color: black;
+        border-color: #E4EBEE;
         color: black;
         font-family: 'Poppins', sans-serif; 
         margin-top: 15px;   
@@ -1027,7 +1069,7 @@ h3{
         padding: 3rem;
         border:none;
         border-bottom: solid 1px;
-        border-color: black;
+        border-color: #E4EBEE;
         background-color: transparent;
         font-family: 'Poppins', sans-serif;
         margin-top: 15px;
