--- a/src/app/Chat-Bet/pages/aboutus/aboutus.component.html
+++ b/src/app/Chat-Bet/pages/aboutus/aboutus.component.html
@@ -123,6 +123,9 @@
 <div id="funciones" class="section">
   <div class="second-section">
     <div class="second-flex">
+      <div class="tag">
+        <span class="TitleTag" id="contactus">The Team</span>
+      </div>
       <h1>Meet the Team Behind ChatBet</h1>
       <div class="text">
           <p>Our team brings together experts in AI, gaming, and technology, united by a passion for innovation.<br /><br /></p>
