--- a/src/app/Chat-Bet/pages/aboutus/aboutus.component.scss
+++ b/src/app/Chat-Bet/pages/aboutus/aboutus.component.scss
@@ -19,12 +19,30 @@ p{
   text-align: justify;
 }
 
+.tag{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    }  
+    .TitleTag{
+        font-family: "Poppins-Bold", sans-serif;
+        text-align: center;
+        display: inline-flex;
+        justify-content: center;
+        border: solid 1px;
+        border-color: #9595ff;
+        border-radius: 50px;
+        padding: 0.5rem 3rem;
+        color: #5554F3;
+        margin: 0 auto; 
+    }
 .backgroundline{
   img{
       width: 100%;
       height: 100%;
       object-fit: cover;
-
+     display: block;
   }
 
   .fotter1{
@@ -202,11 +220,12 @@ h3{
     a{
         color: #5554F3;
         text-decoration: none;
-        margin-right: 20px;
-        font-family:  "Poppins-Bold", sans-serif;
+        margin-right: 12px;
+        font-family: "Poppins-Bold", sans-serif;
+        font-size: 0.8rem;
         &:hover{
             color: #9595ff;
-        }       
+        }   
     @media(min-width: 1050px) and (max-width: 1100px){
         margin-right: 8px;
     }
