--- a/src/app/Chat-Bet/pages/spotlight/spotlight.component.scss
+++ b/src/app/Chat-Bet/pages/spotlight/spotlight.component.scss
@@ -24,7 +24,7 @@ h1,h2,h3,h4,h5,h6{
         width: 100%;
         height: 100%;
         object-fit: cover;
-  
+        display: block;
     }
   
     .fotter1{
@@ -204,11 +204,12 @@ h1,h2,h3,h4,h5,h6{
         a{
             color: #5554F3;
             text-decoration: none;
-            margin-right: 20px;
-            font-family:  "Poppins-Bold", sans-serif;
+            margin-right: 12px;
+            font-family: "Poppins-Bold", sans-serif;
+            font-size: 0.8rem;
             &:hover{
                 color: #9595ff;
-            }       
+            }     
         @media(min-width: 1050px) and (max-width: 1100px){
             margin-right: 8px;
         }
@@ -1084,7 +1085,8 @@ h1,h2,h3,h4,h5,h6{
     .notice{
         display: flex;
         justify-content: center;
-        width: 80%;
+        width: 100%;
+        align-items: center;
 
         @media (max-width: 900px){
             display: block;
@@ -1093,6 +1095,7 @@ h1,h2,h3,h4,h5,h6{
 
         img{
         width: 25%;
+        height: 25%;
         border-radius: 25px;
         height: auto;
 
