--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -98,9 +98,9 @@ align-items: center;
     }
 }
 h1{
-    font-size: 3rem;
+    font-size: 2.3rem;
     font-weight: bold;
-    font-family: "Poppins-Bold", sans-serif;
+    font-family: "Poppins-Medium", sans-serif;
     margin-top: 24px;
     margin-bottom: 0;
     @media (max-width: 900px){
@@ -272,7 +272,7 @@ h3{
     }
     .TitleBoldMobile{
         font-family: "Poppins", sans-serif;
-        font-size: 1.2rem;
+        font-size: 1rem;
         @media screen and (max-width: 900px){
             font-size: 1.5rem;
         }
@@ -406,13 +406,14 @@ h3{
         width:100%;
         margin-top: 3rem;
         .image-first-container{
-            width:40%;
+            width:50%;
+            height: auto;
             position: relative;
             .lastimage{
                 position: absolute;
                 top: 0;
                 right: 0;
-                width: 35%;
+                width: 40%;
                 margin-right: 10%;
                 height: auto;
               }
@@ -808,7 +809,7 @@ h3{
             visibility: hidden;
         }
           .image-section{
-                    width: 55%;    
+                    width: 45%;    
                     @media screen and (max-width: 900px){
                         width: 100%;
                     }
@@ -900,6 +901,26 @@ h3{
         justify-content: space-between;
         align-items: center;
         width: 100%;
+        .completebutton{
+            margin-top: 2rem;
+             a{
+            padding: 1rem;
+            border: solid 1px;
+            border-color: #9595ff;
+            border-radius: 50px;
+            background-color: #5554F3;
+            color: white;
+            font-family: 'Poppins', sans-serif;
+            font-size: medium;
+            text-align: center;
+            text-decoration: none;
+            width: 90%;
+            display: flex;
+            justify-content: center;
+            @media (max-width: 900px){
+                width: 90%;    
+            }
+        }}
         .text {
             font-family: 'Poppins', sans-serif;
             color: black; 
